<resources>
    <string name="app_name">Papo reto</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="forgot_pass">Esqueceu a senha ?</string>
    <string name="create_new_account">Criar nova conta</string>
    <string name="logomarca">by LoopSoftware</string>
    <string name="fullname">Nome completo</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="new_message">Nova mensagem</string>
    <string name="username">Nome do usuario</string>
    <string name="message_text">Esta é uma mensagem de teste, Esta é uma mensagem de teste, Esta é uma mensagem de teste, Esta é uma mensagem de teste, Esta é uma mensagem de teste, Esta é uma mensagem de teste, Esta é uma mensagem de teste</string>
    <string name="yesterday">Ontem</string>
    <string name="name">Nome</string>
    <string name="to">Para:</string>
    <string name="preferences">Preferências</string>
    <string name="dark_mode">Modo escuro</string>
    <string name="active_status">Status ativado</string>
    <string name="acessibility">Acessibilidade</string>
    <string name="privacy_and_security">Privacidade e Segurança</string>
    <string name="notifications">Notificações</string>
    <string name="account">Conta</string>
    <string name="logout">Sair</string>
    <string name="delete_account">Deletar a conta</string>
</resources>