<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/image_background"
        app:contentPadding="10dp"
        android:src="@drawable/baseline_person_24"
        app:cornerFamily="rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerSize= "50%"/>


    <TextView
        android:id="@+id/txt_name"
        android:layout_marginStart="10dp"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/username"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintTop_toTopOf="@id/img_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_message"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/message_text"
        android:textColor="@color/dark_gray"
        android:maxLines="2"
        android:ellipsize="marquee"
        app:layout_constraintStart_toStartOf="@id/txt_name"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintEnd_toStartOf="@id/txt_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_date"
        android:text="@string/yesterday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>